IaC/Archive/hoh-vpc-withinstances.yaml
Description:  HoH Hello World VPC
Parameters:
  LatestAmiId:
    Description: AMI for EC2
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.64.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: hoh-app-vpc
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: hoh-app-igw
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTableWeb: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: hoh-app-web-rt
  RouteTableWebDefaultIPv4: 
    Type: 'AWS::EC2::Route'
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId:
        Ref: RouteTableWeb
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId:
        Ref: InternetGateway
  RouteTableAssociationProd:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetProd
      RouteTableId:
        Ref: RouteTableWeb
  RouteTableAssociationDev:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetDev
      RouteTableId:
        Ref: RouteTableWeb
  SubnetProd:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.64.0.0/20
      Tags:
        - Key: Name
          Value: sn-hoh-prod
  SubnetDev:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.64.16.0/20
      Tags:
        - Key: Name
          Value: sn-hoh-dev
  InstanceSecurityGroupProd:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 IPv4
      SecurityGroupIngress:
        - Description: 'Allow SSH IPv4 IN'
          IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow HTTP IPv4 IN'
          IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow ICMP Between Subnets'
          IpProtocol: icmp
          FromPort: '8'
          ToPort: '-1'
          CidrIp: '10.64.0.0/16'
  InstanceSecurityGroupDev:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 IPv4
      SecurityGroupIngress:
        - Description: 'Allow SSH IPv4 IN'
          IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow Jenkins 8080 Port'
          IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow ICMP Between Subnets'
          IpProtocol: icmp
          FromPort: '8'
          ToPort: '-1'
          CidrIp: '10.64.0.0/16'
  SessionManagerRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
              - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 
                  - 'ssm:DescribeAssociation'
                  - 'ssm:GetDeployablePatchSnapshotForInstance'
                  - 'ssm:GetDocument'
                  - 'ssm:DescribeDocument'
                  - 'ssm:GetManifest'
                  - 'ssm:GetParameter'
                  - 'ssm:GetParameters'
                  - 'ssm:ListAssociations'
                  - 'ssm:ListInstanceAssociations'
                  - 'ssm:PutInventory'
                  - 'ssm:PutComplianceItems'
                  - 'ssm:PutConfigurePackageResult'
                  - 'ssm:UpdateAssociationStatus'
                  - 'ssm:UpdateInstanceAssociationStatus'
                  - 'ssm:UpdateInstanceInformation'
                Resource: '*'
              - Effect: Allow
                Action:
                  - 'ssmmessages:CreateControlChannel'
                  - 'ssmmessages:CreateDataChannel'
                  - 'ssmmessages:OpenControlChannel'
                  - 'ssmmessages:OpenDataChannel' 
                Resource: '*'
              - Effect: Allow
                Action: 
                  - 'ec2messages:AcknowledgeMessage'
                  - 'ec2messages:DeleteMessage'
                  - 'ec2messages:FailMessage'
                  - 'ec2messages:GetEndpoint'
                  - 'ec2messages:GetMessages'
                  - 'ec2messages:SendReply'
                Resource: '*'
  SessionManagerInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref SessionManagerRole
  ProdEC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.micro"
      ImageId: !Ref LatestAmiId
      IamInstanceProfile: !Ref SessionManagerInstanceProfile
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref SubnetProd
          PrivateIpAddress: '10.64.10.1'
          GroupSet:
            - !Ref InstanceSecurityGroupProd
      Tags:
        - Key: Name
          Value: hoh-prod
      UserData: 
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            sudo yum update -y
            sudo yum install httpd -y
            sudo systemctl enable httpd.service
            sudo systemctl start httpd.service
            find /var/www -type d -exec chmod 2775 {} \;
            find /var/www -type f -exec chmod 0664 {} \;
            echo '<html><h1>HoH Production Server</h1><h3>Availability Zone: ' > /var/www/html/index.html
            curl http://169.254.169.254/latest/meta-data/placement/availability-zone >> /var/www/html/index.html
            echo '</h3> <h3>Instance Id: ' >> /var/www/html/index.html
            curl http://169.254.169.254/latest/meta-data/instance-id >> /var/www/html/index.html
            echo '</h3> <h3>Public IP: ' >> /var/www/html/index.html
            curl http://169.254.169.254/latest/meta-data/public-ipv4 >> /var/www/html/index.html
            echo '</h3> <h3>Local IP: ' >> /var/www/html/index.html
            curl http://169.254.169.254/latest/meta-data/local-ipv4 >> /var/www/html/index.html
            echo '</h3> ' >> /var/www/html/index.html
            echo '<a href="pipeline.html">Pipeline Demo</a></html> ' >> /var/www/html/index.html
            echo '<html><h1>Pipeline has not performed a build.</h1></html> ' > /var/www/html/pipeline.html
  DevEC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.micro"
      ImageId: !Ref LatestAmiId
      IamInstanceProfile: !Ref SessionManagerInstanceProfile
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref SubnetDev
          PrivateIpAddress: '10.64.20.1'
          GroupSet: 
            - !Ref InstanceSecurityGroupDev
      Tags:
        - Key: Name
          Value: hoh-dev
      UserData: 
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            sudo yum update -y
            cd /etc/yum.repos.d/
            sudo wget https://pkg.jenkins.io/redhat-stable/jenkins.repo
            sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key
            sudo amazon-linux-extras install java-openjdk11 -y
            sudo yum install jenkins -y
            sudo yum install git -y
            sudo systemctl enable jenkins
            sudo systemctl start jenkins
Outputs:
  hohvpc:
    Description: HoH VPC1
    Value: !Ref VPC
    Export: 
      Name: hoh-app-vpc
  hohvpcsubnetprod:
    Description: HoH VPC1 Subnet Production
    Value: !Ref SubnetProd
    Export:
      Name: hoh-app-vpc-subnet-prod
  hohvpvsubnetdev:
    Description: HoH VPC1 Subnet Development
    Value: !Ref SubnetDev
    Export:
      Name: hoh-app-vpc-subnet-dev
